test/parser/should_fail/import2.souc.bad
import import

main() = do
    print "ok"
